--- a/Tenant Onboarding Solution/Src/Details Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Details Screen.fx.yaml
@@ -1068,7 +1068,28 @@
         NoAction: |-
             =UpdateContext({showPopUp:false})
         Visible: =showPopUp
-        YesAction: |-
-            =Switch(action,"APPROVE",UpdateContext({showPopUp:false});Navigate('Mail Screen',ScreenTransition.CoverRight),"REJECT",UpdateContext({showPopUp:false});UpdateContext({showLoading:true});SendMail.Run(record.'Name of Prospective Tenant',"REJECTED",record.'Email Address');UpdateContext({showLoading:false});Navigate('Home Screen',ScreenTransition.CoverRight));
+        YesAction: |
+            =Switch(
+                action,
+                "APPROVE",
+                UpdateContext({showPopUp: false});
+                Navigate(
+                    'Mail Screen',
+                    ScreenTransition.CoverRight
+                ),
+                "REJECT",
+                UpdateContext({showPopUp: false});
+                UpdateContext({showLoading: true});
+                SendMail.Run(
+                    record.'Name of Prospective Tenant',
+                    "REJECTED",
+                    record.'Email Address'
+                );
+                UpdateContext({showLoading: false});
+                Navigate(
+                    'Home Screen',
+                    ScreenTransition.CoverRight
+                )
+            );
         ZIndex: =4
 
