--- a/Tenant Onboarding Solution/Src/Components/Navigator.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Components/Navigator.fx.yaml
@@ -69,7 +69,7 @@ Navigator As CanvasComponent:
                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
                 Height: =Parent.Height
-                Image: ='logo black'
+                Image: ='legacy poise purple cropped'
                 PaddingRight: =0.00
                 PaddingTop: =0.00
                 Width: =Parent.Width - Parent.PaddingLeft - Parent.PaddingRight
