--- a/Tenant Onboarding Solution/Src/Components/component_Header.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Components/component_Header.fx.yaml
@@ -24,7 +24,8 @@ component_Header As CanvasComponent:
         ZIndex: =1
 
         Image10 As image:
-            BorderColor: =App.Theme.Colors.Darker40
+            BorderColor: =RGBA(85, 69, 191,1)
+            BorderThickness: =2
             DisabledBorderColor: =RGBA(166, 166, 166, 1)
             DisabledFill: =RGBA(244, 244, 244, 1)
             Fill: =RGBA(217, 217, 217, 1)
