--- a/Tenant Onboarding Solution/Src/All Requests Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/All Requests Screen.fx.yaml
@@ -398,7 +398,7 @@
                                 Label26_2 As label:
                                     Align: =Align.Center
                                     BorderColor: =App.Theme.Colors.Darker40
-                                    Color: =RGBA(17, 65, 133, 1)
+                                    Color: =RGBA(85, 69, 191,1)
                                     DisabledColor: =RGBA(166, 166, 166, 1)
                                     Font: =App.Theme.Font
                                     FontWeight: =FontWeight.Semibold
