--- a/Tenant Onboarding Solution/Src/Home Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Home Screen.fx.yaml
@@ -119,7 +119,7 @@
                                 Label26 As label:
                                     Align: =Align.Center
                                     BorderColor: =App.Theme.Colors.Darker40
-                                    Color: =RGBA(17, 65, 133, 1)
+                                    Color: =RGBA(85, 69, 191,1)
                                     DisabledColor: =RGBA(166, 166, 166, 1)
                                     Font: =App.Theme.Font
                                     FontWeight: =FontWeight.Semibold
@@ -298,7 +298,7 @@
                                 Label26_1 As label:
                                     Align: =Align.Center
                                     BorderColor: =App.Theme.Colors.Darker40
-                                    Color: =RGBA(17, 65, 133, 1)
+                                    Color: =RGBA(85, 69, 191,1)
                                     DisabledColor: =RGBA(166, 166, 166, 1)
                                     Font: =App.Theme.Font
                                     FontWeight: =FontWeight.Semibold
