--- a/Tenant Onboarding Solution/Src/Mail Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Mail Screen.fx.yaml
@@ -220,7 +220,7 @@
                 SendMail.Run(
                     record.'Name of Prospective Tenant',
                     "APPROVED",
-                    record.'Email Address',
+                    record.'Email Address',record.ID,
                     {text_2: RichTextEditor2.HtmlText}
                 ).responsecode
             );
