--- a/Tenant Onboarding Solution/Src/Mail Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Mail Screen.fx.yaml
@@ -1,6 +1,8 @@
 "'Mail Screen' As screen":
     Fill: =Color.White
     LoadingSpinnerColor: =App.Theme.Colors.Primary
+    OnVisible: |-
+        =//UpdateContext({showLoading: false});
 
     Container13_7 As groupContainer.horizontalAutoLayoutContainer:
         Fill: |
@@ -213,7 +215,7 @@
             =UpdateContext({showPopUp:false})
         Visible: =showPopUp
         YesAction: |-
-            =UpdateContext({showPopUp: false});
+            =Notify("Hello")/*UpdateContext({showPopUp: false});
             UpdateContext({showLoading: true});
             Set(
                 result,
@@ -241,6 +243,6 @@
                     "There was an error sending the mail. Please check your network connectivity and try again.",
                     NotificationType.Error
                 )
-            )
+            )*/
         ZIndex: =3
 
