--- a/Tenant Onboarding Solution/Src/Mail Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Mail Screen.fx.yaml
@@ -247,3 +247,191 @@
             )
         ZIndex: =3
 
+    Container43_1 As groupContainer.verticalAutoLayoutContainer:
+        DropShadow: =DropShadow.Light
+        Fill: =RGBA(0, 0, 0, 0.3)
+        Height: =Parent.Height
+        LayoutAlignItems: =LayoutAlignItems.Center
+        LayoutDirection: =LayoutDirection.Vertical
+        LayoutJustifyContent: =LayoutJustifyContent.Center
+        LayoutMode: =LayoutMode.Auto
+        RadiusBottomLeft: =4
+        RadiusBottomRight: =4
+        RadiusTopLeft: =4
+        RadiusTopRight: =4
+        Visible: =showPopUp
+        Width: =Parent.Width
+        ZIndex: =4
+
+        Container45_1 As groupContainer.verticalAutoLayoutContainer:
+            AlignInContainer: =AlignInContainer.SetByContainer
+            Fill: =RGBA(255, 255, 255, 1)
+            FillPortions: =0
+            Height: =Parent.Height/2
+            LayoutAlignItems: =LayoutAlignItems.Stretch
+            LayoutDirection: =LayoutDirection.Vertical
+            LayoutJustifyContent: =LayoutJustifyContent.Center
+            LayoutMinHeight: =100
+            LayoutMinWidth: =250
+            LayoutMode: =LayoutMode.Auto
+            PaddingBottom: =20
+            PaddingLeft: =20
+            PaddingRight: =20
+            PaddingTop: =20
+            RadiusBottomLeft: =20
+            RadiusBottomRight: =20
+            RadiusTopLeft: =20
+            RadiusTopRight: =20
+            ZIndex: =1
+
+            Container48_2 As groupContainer.verticalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
+                FillPortions: =0.5
+                LayoutDirection: =LayoutDirection.Vertical
+                LayoutGap: =10
+                LayoutJustifyContent: =LayoutJustifyContent.Center
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =1
+
+                Label21_1 As label:
+                    Align: =Align.Center
+                    AlignInContainer: =AlignInContainer.Stretch
+                    BorderColor: =App.Theme.Colors.Darker40
+                    Color: =RGBA(0, 0, 0, 1)
+                    DisabledColor: =RGBA(166, 166, 166, 1)
+                    Font: =Font.Arial
+                    FontWeight: =FontWeight.Bold
+                    Size: =13
+                    Text: =action
+                    ZIndex: =1
+
+                Rectangle9_1 As rectangle:
+                    AlignInContainer: =AlignInContainer.Stretch
+                    BorderColor: =App.Theme.Colors.Darker40
+                    Fill: =RGBA(85, 69, 191,1)//RGBA(222,222,222,1)
+                    Height: =2
+                    ZIndex: =2
+
+            Container48_3 As groupContainer.verticalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
+                FillPortions: =2
+                LayoutAlignItems: =LayoutAlignItems.Stretch
+                LayoutDirection: =LayoutDirection.Vertical
+                LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =2
+
+                Image13_1 As image:
+                    BorderColor: =App.Theme.Colors.Darker40
+                    DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                    DisabledFill: =RGBA(244, 244, 244, 1)
+                    FillPortions: =1
+                    Image: =quuestion_icon
+                    LayoutMinHeight: =0
+                    LayoutMinWidth: =0
+                    ZIndex: =1
+
+                Label22_1 As label:
+                    Align: =Align.Center
+                    AutoHeight: =true
+                    BorderColor: =App.Theme.Colors.Darker40
+                    Color: =RGBA(179, 179, 179, 1)
+                    DisabledColor: =RGBA(166, 166, 166, 1)
+                    Font: =App.Theme.Font
+                    FontWeight: =FontWeight.Bold
+                    LayoutMinHeight: =
+                    LayoutMinWidth: =0
+                    Size: =9
+                    Text: ="Are you sure you want to " & action
+                    ZIndex: =2
+
+            Container49_1 As groupContainer.horizontalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
+                FillPortions: =1.5
+                LayoutAlignItems: =LayoutAlignItems.Center
+                LayoutGap: =30
+                LayoutJustifyContent: =LayoutJustifyContent.Center
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =3
+
+                no_btn_1 As button:
+                    BorderColor: =RGBA(85, 69, 191,1)
+                    Color: =RGBA(85, 69, 191,1)
+                    DisabledBorderColor: =RGBA(244, 244, 244, 1)
+                    DisabledColor: =RGBA(166, 166, 166, 1)
+                    DisabledFill: =RGBA(244, 244, 244, 1)
+                    Fill: =Color.White
+                    FocusedBorderThickness: =2
+                    Font: =App.Theme.Font
+                    FontWeight: =FontWeight.Semibold
+                    HoverBorderColor: =RGBA(85, 69, 191,1)
+                    HoverFill: =ColorFade(Self.Fill, -20%)
+                    OnSelect: |-
+                        =UpdateContext({showPopUp:false})
+                    PressedBorderColor: =RGBA(85, 69, 191,1)
+                    PressedColor: =Self.Color
+                    PressedFill: =Self.Fill
+                    Size: =15
+                    Text: ="No"
+                    ZIndex: =1
+
+                yes_btn_1 As button:
+                    BorderColor: =RGBA(85, 69, 191,1)
+                    DisabledBorderColor: =RGBA(244, 244, 244, 1)
+                    DisabledColor: =RGBA(166, 166, 166, 1)
+                    DisabledFill: =RGBA(244, 244, 244, 1)
+                    Fill: =RGBA(85, 69, 191,1)
+                    FocusedBorderThickness: =2
+                    Font: =App.Theme.Font
+                    FontWeight: =FontWeight.Semibold
+                    HoverBorderColor: =RGBA(85, 69, 191,1)
+                    HoverColor: =RGBA(255, 255, 255, 1)
+                    HoverFill: =ColorFade(Self.Fill,20%)
+                    OnSelect: |-
+                        =UpdateContext({showPopUp: false});
+                        UpdateContext({showLoading: true});
+                        Set(
+                            result,
+                            SendMail.Run(
+                                record.'Name of Prospective Tenant',
+                                "APPROVED",
+                                record.'Email Address',
+                                record.ID,
+                                {text_2: RichTextEditor2.HtmlText}
+                            ).responsecode
+                        );
+                        If(
+                            result = "00",
+                            UpdateContext({showLoading: false});
+                            Reset(RichTextEditor2);
+                            Notify(
+                                "Offer letter has been sent successfully",
+                                NotificationType.Success
+                            );
+                            Navigate('Home Screen');
+                            Set(
+                                record,
+                                Blank()
+                            ),
+                            Notify(
+                                "There was an error sending the mail. Please check your network connectivity and try again.",
+                                NotificationType.Error
+                            )
+                        )
+                    PressedBorderColor: =App.Theme.Colors.Darker40
+                    PressedColor: =Self.Color
+                    PressedFill: =Self.Fill
+                    RadiusBottomLeft: =6
+                    RadiusBottomRight: =6
+                    RadiusTopLeft: =6
+                    RadiusTopRight: =6
+                    Size: =15
+                    Text: ="Yes"
+                    ZIndex: =2
+
