--- a/Tenant Onboarding Solution/Src/Details Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Details Screen.fx.yaml
@@ -103,7 +103,7 @@
                             Height: =Parent.Height
                             HoverBorderColor: =App.Theme.Colors.Darker10
                             HoverFill: =Self.Fill
-                            OnSelect: =Navigate('Home Screen')
+                            OnSelect: =Back()
                             PressedBorderColor: =App.Theme.Colors.Darker40
                             PressedColor: =Self.Color
                             PressedFill: =Self.Fill
