--- a/Tenant Onboarding Solution/Src/Mail Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Mail Screen.fx.yaml
@@ -239,6 +239,7 @@
                     record,
                     Blank()
                 ),
+                UpdateContext({showLoading: false});
                 Notify(
                     "There was an error sending the mail. Please check your network connectivity and try again.",
                     NotificationType.Error
