--- a/Tenant Onboarding Solution/Src/Details Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Details Screen.fx.yaml
@@ -1089,7 +1089,7 @@
                 If(result = "00",Notify("Request has been rejected successfully and notification has been sent");Navigate(
                     'Home Screen',
                     ScreenTransition.CoverRight
-                ),Notify("There was a "))
+                ),Notify("There was a problem rejecting this request. Please try again."))
                 
             );
         ZIndex: =4
